add-task-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add-task-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: add-task
  template:
    metadata: 
      name: pod1
      namespace: default
     

      labels:
        app: add-task
    spec:
      containers: 
      - name: add-task-container
        image: badalswami/add-task-image:latest
        ports:
          - containerPort: 8000
