delete-task-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-task-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: delete-task
  template:
    metadata: 
      name: pod1
      namespace: default
     

      labels:
        app: delete-task
    spec:
      containers: 
      - name: delete-task-container
        image: badalswami/delete-task-image:latest
        ports:
          - containerPort: 8000
