frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata: 
      name: pod1
      namespace: default
     

      labels:
        app: frontend
    spec:
      containers: 
      - name: frontend-container
        image: badalswami/frontend-iamge-v3:latest
        ports:
          - containerPort: 80
