get-task-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: get-task
  template:
    metadata: 
      name: pod1
      namespace: default
     

      labels:
        app: get-task
    spec:
      containers: 
      - name: get-task-container
        image: badalswami/my-image:latest
        ports:
          - containerPort: 8000
