pod2.yml
apiVersion: v1
kind: Pod
metadata: 
  name: pod2
  namespace: default
  labels:
    sticker: puma
    env: dev
spec:
  containers: 
  - name: nginx1-container
    image: nginx
    ports:
      - containerPort: 80
