sonarpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  namespace: default
  labels:
    name: myapp
spec:
  containers:
    - name: myapp
      image: sonarqube
      ports:
        - containerPort: 9000
