add-task-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: add-task-svc
spec:
  selector:
    app: add-task
  ports:
  - port: 8000
    targetPort: 8000
