delete-task-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: delete-task-svc
spec:
  selector:
    app: delete-task
  ports:
  - port: 8000
    targetPort: 8000
