get-task-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: get-task-svc
spec:
  selector:
    app: get-task
  ports:
  - port: 80
    targetPort: 8000
