services.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp1
spec:
  selector:
    sticker: puma
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
