sonarsvc.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    name: myapp
    
  ports:
  - port: 80
    targetPort: 9000
  type: LoadBalancer
